[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/Options/General/IntegrationSettings.gd" type="Script" id=1]

[node name="IntegrationSettings" type="Control"]
margin_top = 37.0
margin_right = 410.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 32 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Available" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlatformLabel" type="Label" parent="Available"]
margin_top = 9.0
margin_right = 153.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Newgrounds:"
valign = 1

[node name="StatusLabel" type="Label" parent="Available"]
margin_left = 157.0
margin_top = 9.0
margin_right = 310.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Enabled"
valign = 1

[node name="ChangeButton" type="Button" parent="Available"]
margin_left = 314.0
margin_right = 410.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
text = "Change"

[node name="UnavailableLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "Not available on this platform."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Available/ChangeButton" to="." method="_on_ChangeButton_pressed"]
